tests/ui/compile-fail/init/packed_struct.stderr
error[E0793]: reference to field of packed struct is unaligned
  --> tests/ui/compile-fail/init/packed_struct.rs:11:13
   |
11 |     let _ = init!(Foo { a: -42, b: 42 });
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this struct is 1-byte aligned, but the type of this field may require higher alignment
   = note: creating a misaligned reference is undefined behavior (even if that reference is never dereferenced)
   = help: copy the field contents to a local variable, or replace the reference with a raw pointer and use `read_unaligned`/`write_unaligned` (loads and stores via `*p` must be properly aligned even when using raw pointers)
   = note: this error originates in the macro `init` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0793]: reference to field of packed struct is unaligned
  --> tests/ui/compile-fail/init/packed_struct.rs:12:13
   |
12 |       let _ = init!(Foo {
   |  _____________^
13 | |         b: 42,
14 | |         ..Zeroable::init_zeroed()
15 | |     });
   | |______^
   |
   = note: this struct is 1-byte aligned, but the type of this field may require higher alignment
   = note: creating a misaligned reference is undefined behavior (even if that reference is never dereferenced)
   = help: copy the field contents to a local variable, or replace the reference with a raw pointer and use `read_unaligned`/`write_unaligned` (loads and stores via `*p` must be properly aligned even when using raw pointers)
   = note: this error originates in the macro `init` (in Nightly builds, run with -Z macro-backtrace for more info)
